Adding function to deal with name inconsistency

--- a/public/favorite-recipes.html
+++ b/public/favorite-recipes.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="favorite-recipes.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon"> <!-- Link to favicon -->
   </head>
 <body>
   <header>
