--- a/public/my-substitutes.html
+++ b/public/my-substitutes.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="my-substitutes.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon"> <!-- Link to favicon -->
   </head>
 <body>
   <header>
@@ -61,14 +62,16 @@
     </div>
   </div>
   <!-- Add New Substitute Modal -->
-  <div id="substituteModal" class="modal">
+  <div id="addOrEditSubstituteModal" class="modal">
     <div class="modal-content">
       <span id="closeSubstituteModal" class="close">&times;</span>
       <h2 id="modalTitle">新しい代用品を追加</h2>
       <form id="substituteForm">
-        <div class="ingredient-header">
-          <label for="ingredient">材料</label>
-          <input type="text" id="ingredient" name="ingredient" placeholder="例: 鶏肉" required>
+        <div class="modal-ingredient-header">
+          <div>
+            <label for="ingredient">材料</label>
+            <input type="text" id="ingredient" name="ingredient" placeholder="鶏肉" required>
+          </div>
         </div>
         <table class="substitute-table">
           <thead>
