Fixed all errors for now before launching

--- a/public/favorite-recipes.html
+++ b/public/favorite-recipes.html
@@ -74,8 +74,9 @@
     <div class="modal-content">
       <span id="closeConfirmDeleteModal" class="close">&times;</span>
       <p>本当に削除しますか？</p>
-      <button id="confirmDeleteButton">削除</button>
-      <button id="cancelDeleteButton">キャンセル</button>
+      <div class="button-container">
+        <button id="confirmDeleteButton">削除</button>
+        <button id="cancelDeleteButton">キャンセル</button>
     </div>
   </div>
   <script src="scripts/favoriteRecipes.js" type="module"></script>
