--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,10 @@
         <p>代用品を1つ選択して決定を押してください。<br>ログインされている場合、my代用品も表示されます。<br>my代用品には<span class="star">★</span>が表示されます。</p>
         <form id="substituteForm">
           <ul id="substitutesList"></ul>
-          <button type="button" id="selectSubstitute">決定</button>
+          <div class="button-container">
+            <button id="selectSubstituteButton">選択</button>
+            <button id="cancelSelectButton">キャンセル</button>
+          </div>
         </form>
       </div>
     </div>
