--- a/public/favorite-recipes.html
+++ b/public/favorite-recipes.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>お気に入りのレシピ</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="favorite-recipes.css">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon"> <!-- Link to favicon -->
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>お気に入りのレシピ</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/favorite-recipes.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
+  <link rel="icon" href="images/favicon.svg" type="image/svg+xml"> <!-- SVG favicon -->
+  <link rel="icon" href="images/favicon.png" type="image/png"> <!-- PNG fallback -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon"> <!-- ICO fallback -->
+</head>
 <body>
   <header>
     <div class="header-container">
