--- a/public/my-substitutes.html
+++ b/public/my-substitutes.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my代用品</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="my-substitutes.css">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon"> <!-- Link to favicon -->
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/my-substitutes.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/favicon.svg" type="image/svg+xml"> <!-- SVG favicon -->
+    <link rel="icon" href="images/favicon.png" type="image/png"> <!-- PNG fallback -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon"> <!-- ICO fallback -->
   </head>
 <body>
   <header>
