Modified html error

--- a/public/my-substitutes.html
+++ b/public/my-substitutes.html
@@ -130,6 +130,7 @@
         <button id="confirmDeleteSubstituteButton">削除</button>
         <button id="cancelDeleteSubstituteButton">キャンセル</button>
       </div>
+    </div>
   </div>
   <script src="scripts/mySubstitutes.js" type="module"></script>
 </body>
