--- a/public/favorite-recipes.html
+++ b/public/favorite-recipes.html
@@ -85,6 +85,7 @@
       <div class="button-container">
         <button id="confirmDeleteButton">削除</button>
         <button id="cancelDeleteButton">キャンセル</button>
+      </div>
     </div>
   </div>
   <script src="scripts/favoriteRecipes.js" type="module"></script>
