--- a/public/favorite-recipes.html
+++ b/public/favorite-recipes.html
@@ -88,6 +88,6 @@
       </div>
     </div>
   </div>
-  <script src="scripts/favoriteRecipes.js" type="module"></script>
+  <script src="js/favoriteRecipes.js" type="module"></script>
 </body>
 </html>
