--- a/public/index.html
+++ b/public/index.html
@@ -181,6 +181,6 @@
       <img class="modal-content" id="expandedImage">
     </div>
   </div>
-  <script src="scripts/main.js" type="module"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
