--- a/public/my-substitutes.html
+++ b/public/my-substitutes.html
@@ -132,6 +132,6 @@
       </div>
     </div>
   </div>
-  <script src="scripts/mySubstitutes.js" type="module"></script>
+  <script src="js/mySubstitutes.js" type="module"></script>
 </body>
 </html>
